<resources>
    <string name="app_name">AuthDBFirebase</string>
    <string name="facebook_app_id">344439716180028</string>
    <string name="fb_login_protocol_scheme">fb344439716180028</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellidos</string>
    <string name="age">Edad</string>
    <string name="birthday">Fecha de Nacimiento</string>
    <string name="saveData">Guardar Datos</string>
    <string name="msgErrorSaving">Ocurrio un error, intentelo nuevamente.</string>
    <string name="msgSuccess">Sus datos fueron guardados correctamente.</string>
    <string name="titleMain">Informacion</string>
    <string name="shouldBeNumber">La edad es un numero</string>
    <string name="isRequired">Campo requerido</string>
    <string name="loginCancel">Login Cancelado</string>
</resources>
