<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:id="@+id/tvMsgSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgSuccess"
        android:textColor="@color/colorPrimary"
        android:layout_marginVertical="10dp"
        android:visibility="gone"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"/>
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastName"/>
            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"/>
            <EditText
                android:id="@+id/etAge"
                android:layout_width="50dp"
                android:inputType="number"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"/>
            <TextView
                android:id="@+id/tvBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="#000"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"/>
            <Button
                android:id="@+id/btnSaveData"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:textColor="#FFF"
                android:text="@string/saveData"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>